# put this code in
[project]
name = "agent-toolkit"
version = "0.1.0"
description = "A short description of your project"
authors = [{ name = "anushkarajoriya14", email = "anushkarajoriya14@gmail.com" }]
dependencies = ["openai>=1.0.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"